2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/Quality_Control__c.object-meta.xml
<CustomObject>
    <description>Quality Control Cycle documentation</description>
    <label>Quality Control</label>
    <nameField>
        <displayFormat>QC-{YY}{0000}</displayFormat>
        <label>Quality Control name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>