2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <formula>Title__r.artApp__Artist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Artist</label>
    <type>Text</type>
</CustomField>