2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <formula>Title__r.Job_Reference__r.Client_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>