2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Comments_by_QCM__c.field-meta.xml
<CustomField>
    <fullName>Comments_by_QCM__c</fullName>
    <label>Comments by QCM</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>