2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome__c</fullName>
    <label>Final Outcome</label>
    <type>TextArea</type>
</CustomField>