2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Flagged_reasons__c.field-meta.xml
<CustomField>
    <fullName>Flagged_reasons__c</fullName>
    <label>Flagged reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material (Ceramic,Acrylic,Stone,Glass,Neon)</fullName>
            </value>
            <value>
                <fullName>Unusual or protruding surface</fullName>
            </value>
            <value>
                <fullName>Oversized (&gt; 300x 200cm)</fullName>
            </value>
            <value>
                <fullName>Overweight (&gt; 200kg)</fullName>
            </value>
            <value>
                <fullName>Packing show physical damage</fullName>
            </value>
            <value>
                <fullName>Packing shows water damage</fullName>
            </value>
            <value>
                <fullName>Insecure packing - internal movement detected</fullName>
            </value>
            <value>
                <fullName>Tip and Tell/Shockwatch activated</fullName>
            </value>
            <value>
                <fullName>High value item</fullName>
            </value>
            <value>
                <fullName>Special client</fullName>
            </value>
            <value>
                <fullName>Others (specify in Others field below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>