2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Job_Brief__c.field-meta.xml
<CustomField>
    <fullName>Job_Brief__c</fullName>
    <label>Job Brief</label>
    <type>TextArea</type>
</CustomField>