2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Reference</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipLabel>Quality Controls</relationshipLabel>
    <relationshipName>Quality_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>