2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>199</length>
    <type>Text</type>
</CustomField>