2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/QCM_Manager__c.field-meta.xml
<CustomField>
    <fullName>QCM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QCM Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quality Controls (QCM Manager)</relationshipLabel>
    <relationshipName>Quality_Controls1</relationshipName>
    <type>Lookup</type>
</CustomField>