2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Status_After_QCC__c.field-meta.xml
<CustomField>
    <fullName>Status_After_QCC__c</fullName>
    <label>Status (After QCC)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>