2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quality Controls</relationshipLabel>
    <relationshipName>Quality_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>