2nd training/Community/Community/Community1/force-app/main/default/objects/Quality_Control__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title</label>
    <referenceTo>artApp__Artwork__c</referenceTo>
    <relationshipLabel>Quality Controls</relationshipLabel>
    <relationshipName>Quality_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>